@@ -71,7 +71,7 @@
 "mainpage"		=> "Головна стаття",
 "mainpagetext"	=> "Програмне забезпечення вікі встановлено.",
 "about"			=> "Про",
-"aboutsite"      => "Про Вікіпедію",
+"aboutsite"      => "Про {{SITENAME}}",
 "aboutpage"		=> "{{ns:project}}:Про",
 "help"			=> "Довідка",
 "helppage"		=> "{{ns:project}}:Довідка",
@@ -141,9 +141,9 @@
 # Main script and global functions
 #
 "nosuchaction"	=> "Такої дії не існує",
-"nosuchactiontext" => "Дія, вказана в URL, не розпізнається програмним забезпеченням Вікіпедії",
+"nosuchactiontext" => "Дія, вказана в URL, не розпізнається програмним забезпеченням {{SITENAME}}",
 "nosuchspecialpage" => "Такої спеціальної сторінки не існує",
-"nospecialpagetext" => "Спеціальна сторінка не розпізнається програмним забезпеченням Вікіпедії.",
+"nospecialpagetext" => "Спеціальна сторінка не розпізнається програмним забезпеченням {{SITENAME}}.",
 
 # General errors
 #
@@ -164,14 +164,14 @@ MySQL повернув помилку \"$3: $4\".",
 "cachederror"	=> "Нижче відображена кеш-копія запитаної статті, можливо вона застаріла.",
 "readonly"		=> "Запис в базу даних заблоковано",
 "enterlockreason" => "Введіть обґрунтування блокування та інформацію про те, коли блокування буде знято",
-"readonlytext"	=> "Внесення нових статей та інші зміни бази даних Вікіпедії в даний момент заблоковано, ймовірно, через планове сервісне обслуговування бази даних,
+"readonlytext"	=> "Внесення нових статей та інші зміни бази даних {{SITENAME}} в даний момент заблоковано, ймовірно, через планове сервісне обслуговування бази даних,
 по закінченню якого нормальний стан буде відновлено.
 Заблокувавший адміністратор дав наступні пояснення:
 <p>$1",
 "missingarticle" => "База даних не знайшла текст статті,
 хоча повинна була знайти під іменем \"$1\".
 <p>Це може бути викликано використанням застарілого посилання на журнал змін або відмінностей для статті, що була вилучена.
-<p>Якщо справа не в цьому, то, швидше за все, ви знайшли помилку в програмному забезпеченні Вікіпедії.
+<p>Якщо справа не в цьому, то, швидше за все, ви знайшли помилку в програмному забезпеченні {{SITENAME}}.
 Будь-ласка, повідомте про це адміністратору, вказавши URL.",
 "internalerror" => "Внутрішня помилка",
 "filecopyerror" => "Неможливо скопіювати файл \"$1\" в \"$2\".",
@@ -197,10 +197,10 @@ You can view and copy the source of this page:",
 #
 "logouttitle"	=> "Вийти з системи",
 "logouttext"	=> "Ви працюєте в тому ж режимі, який був до вашої реєстрації в системі. Ви ідентифікуєтесь не з іменем, а з IP-адресом.
-Ви можете продовжувати використовувати Вікіпедію анонімно, або почати новий сеанс як той же самий чи інший користувач.",
+Ви можете продовжувати використовувати {{SITENAME}} анонімно, або почати новий сеанс як той же самий чи інший користувач.",
 
 "welcomecreation" => "<h2>Вітаємо Вас, $1!</h2><p>Ви зареєстровані.
-Не забудьте налаштувати Вікіпедію так, як Вам зручно.",
+Не забудьте налаштувати {{SITENAME}} так, як Вам зручно.",
 
 "loginpagetitle" => "Вхід в систему",
 "yourname"		=> "Ваше ім'я",
@@ -226,14 +226,14 @@ You can view and copy the source of this page:",
 "loginerror"	=> "Помилка при вході в систему",
 "noname"		=> "Користувача з таким іменем не існує.",
 "loginsuccesstitle" => "Успішний вхід в систему",
-"loginsuccess"	=> "Тепер ви працюєте в Вікіпедії під іменем \"$1\".",
+"loginsuccess"	=> "Тепер ви працюєте в {{SITENAME}} під іменем \"$1\".",
 "nosuchuser"	=> "Користувача з таким іменем \"$1\" не існує.
 Перевірте вірність написання, або скористайтеся формою, що нижче, щоб зареєструвати нового користувача.",
 "wrongpassword"	=> "Введений вами пароль невірний. Попробуйте ще раз.",
 "mailmypassword" => "Відправити вам новий пароль",
-"passwordremindertitle" => "Пам'ятка пароля Вікіпедії",
+"passwordremindertitle" => "Пам'ятка пароля {{SITENAME}}",
 "passwordremindertext" => "Хтось (можливо, ви - з IP-адреси $1)
-зробив запит на відправлення вам нового пароля користувача проекту Вікіпедія.
+зробив запит на відправлення вам нового пароля користувача проекту {{SITENAME}}.
 Пароль користувача \"$2\" тепер такий: \"$3\".
 Тепер вам необхідно ввійти в систему й змінити пароль.",
 "noemail"		=> "Для користувача \"$1\" не вказано адресу електронної пошти.",
@@ -256,7 +256,7 @@ You can view and copy the source of this page:",
 Зверніть увагу, що ви не можете використовувати функцію \"Надіслати електронного листа користувачу\", якщо ви не вказали адресу вашої електронної пошти в Ваших [[Спеціальні:Настройки|настройках]]
 Ваша IP-адреса - $3. Будь-ласка, вказуйте, якщо будете запитувати про блокування.
 ==Зауваження для користувачів America On-Line==
-Через багаторазові акти вандалізму одного з користувачів AOL, Вікіпедія часто блокує проксі-сервери AOL. Один й той же сервер може використовуватися різними користувачами, тому, нажаль, невинні користувачі AOL часто бувають _неспеціальне_ заблоковані. Ми вибачаємося за незручності.
+Через багаторазові акти вандалізму одного з користувачів AOL, {{SITENAME}} часто блокує проксі-сервери AOL. Один й той же сервер може використовуватися різними користувачами, тому, нажаль, невинні користувачі AOL часто бувають _неспеціальне_ заблоковані. Ми вибачаємося за незручності.
 Якщо це відбулося з Вами, відправте, будь-ласка, електронною поштою листа адміністратору. Не забудьте вказати вашу IP-адресу, вказану вище.",
 "newarticle"	=> "(Нова)",
 "newarticletext" => "Ви перейшли на статтю, яка поки що не існує.
@@ -283,7 +283,7 @@ You can view and copy the source of this page:",
 Якщо ви збережете її, будь-які редагування, зроблені між версіями, будуть втрачені.</strong>",
 "yourdiff"		=> "Відмінності",
 "copyrightwarning" => "Будь ласка, зверніть увагу, що будь-які добавлення
-й зміни в Вікіпедїї розглядаються як випущені на умовах
+й зміни в {{SITENAME}} розглядаються як випущені на умовах
 GNU Free Documentation License без незмінюваних секцій
 (див. $1, щоб взнати подробиці).
 Якщо ви не бажаєте, щоб написане вами безжалісно редагувалось
@@ -297,7 +297,7 @@ GNU Free Documentation License без незмінюваних секцій
 Розгляньте, будь-ласка, варіанти розбиття статті на менші частини.</strong>",
 "readonlywarning" => "<strong>ПОПЕРЕДЖЕННЯ: База даних заблокована в зв’язку з процедурами обслуговування,
 тому ви не можете записати ваші зміни в даний момент.
-Можливо, вам варто зберегти текст в локальний файл (на свому диску) й записати його в Вікіпедію пізніше.</strong>",
+Можливо, вам варто зберегти текст в локальний файл (на свому диску) й записати його в {{SITENAME}} пізніше.</strong>",
 "protectedpagewarning" => "<strong>ПОПЕРЕДЖЕННЯ: Ця стаття заблокована, так що тільки користувачі с правом
 Сисоп можуть змінювати її. Будь-ласка, перегляньте
 [[Project:Правила захисту статей'>правила захисту статей]].</strong>",
@@ -329,7 +329,7 @@ GNU Free Documentation License без незмінюваних секцій
 # Search results
 #
 "searchresults" => "Результати пошуку",
-"searchresulttext" => "Для отримання детальнішої інформації про пошук в Вікіпедії, див. [[Project:Пошук|Пошук в Вікіпедії]].",
+"searchresulttext" => "Для отримання детальнішої інформації про пошук в {{SITENAME}}, див. [[Project:Пошук|Пошук в {{SITENAME}}]].",
 "searchquery"	=> "На запит \"$1\"",
 "badquery"		=> "Невірно зфомульований запит",
 "badquerytext"	=> "Неможливо обробити ваш запит.
@@ -401,7 +401,7 @@ $2 Показувати перенаправлення   Пошук на $3 $9",
 "changes" => "редагування",
 "recentchanges" => "Нові редагування",
 # This is the default text, and can be overriden by editing [[{{ns:project}}::Recentchanges]]
-"recentchangestext" => "На цій сторінці представлені останні редагування в Вікіпедії.",
+"recentchangestext" => "На цій сторінці представлені останні редагування в {{SITENAME}}.",
 "rcloaderr"		=> "Завантаження нових редагувань",
 "rcnote"		=> "Нижче відображені останні <strong>$1</strong> редагувань за останні(й) <strong>$2</strong> день(і,ів).",
 "rcnotefrom"	=> "Нижче відображені редагування з <b>$2</b> (до <b>$1</b>).",
@@ -433,10 +433,10 @@ $2 Показувати перенаправлення   Пошук на $3 $9",
 щоб завантажувати файли.",
 "uploaderror"	=> "Помилка завантаження файлу",
 "uploadtext"	=> "'''СТІЙ!''' До того як почати завантажувати файли, переконайтесь, що ви прочитали й дієте відповідно
-[[Project:Правила_використання_зображеннь|правилам використання зображень Вікіпедії]].
+[[Project:Правила_використання_зображеннь|правилам використання зображень {{SITENAME}}]].
 
 Якщо файл з вказаним вами іменем вже існує
-в Вікіпедії, то він буде замінений без попередження.
+в {{SITENAME}}, то він буде замінений без попередження.
 Тому, якщо ви не збираєтесь обновляти файл,
 було б непогано перевірити, чи існує вже
 такий файл.
@@ -461,7 +461,7 @@ $2 Показувати перенаправлення   Пошук на $3 $9",
 '''<nowiki>[[зображення:file.jpg]]</nowiki>''' або '''<nowiki>[[зображення:file.png|альтернативний текст]]</nowiki>'''
 або '''<nowiki>[[звук:file.ogg]]</nowiki>''' для звуків.
 
-Будь-ласка, зверніть увагу, що аналогічно текстам статей Вікіпедії, інші можуть редагувати чи вилучати завантажені вами файли, якщо вони вважають, що це покращить енциклопедію, а ви можете бути заблоковані, якщо ваші дії шкодять системі.",
+Будь-ласка, зверніть увагу, що аналогічно текстам статей {{SITENAME}}, інші можуть редагувати чи вилучати завантажені вами файли, якщо вони вважають, що це покращить енциклопедію, а ви можете бути заблоковані, якщо ваші дії шкодять системі.",
 "uploadlog"		=> "журнал завантажень",
 "uploadlogpage" => "Журнал_завантажень",
 "uploadlogpagetext" => "Нижче представлено список найновіших завантажень файлів.
@@ -471,7 +471,7 @@ $2 Показувати перенаправлення   Пошук на $3 $9",
 "filename"		=> "Назва файлу",
 "filedesc"		=> "Опис файлу",
 "copyrightpage" => "{{ns:project}}:Авторське право",
-"copyrightpagename" => "Авторські права в Вікіпедії",
+"copyrightpagename" => "Авторські права в {{SITENAME}}",
 "uploadedfiles"	=> "Завантажені файли",
 "minlength"		=> "Назва зображення повинна містити хоча б три символи.",
 "badfilename"	=> "Назва зображення було змінено на \"$1\".",
@@ -514,7 +514,7 @@ $2 Показувати перенаправлення   Пошук на $3 $9",
 "sitestats"		=> "Статистика сайту",
 "userstats"		=> "Статистика користувачів",
 "sitestatstext" => "Загалом в базі даних <b>$1</b> статей.
-Сюди входять сторінки \"обговорень\", статті про Вікіпедію, мінімальні статті-\"заглушки\", перенаправлення, та інші сторінки, які, можливо, не повинні розглядатися як статті.
+Сюди входять сторінки \"обговорень\", статті про {{SITENAME}}, мінімальні статті-\"заглушки\", перенаправлення, та інші сторінки, які, можливо, не повинні розглядатися як статті.
 За виключенням них, є <b>$2</b> сторінок, які, швидше за все, повноцінні статті.<p>
 Всього зроблено <b>$3</b> переглядів та <b>$4</b> редагувань статей
 з моменту обновлення програмного забезпечення (20 липня 2002).
@@ -528,7 +528,7 @@ $2 Показувати перенаправлення   Пошук на $3 $9",
 "maintnancepagetext"	=> "На цій сторінці є декілька зручних інструментів для щоденного обслуговування. Деякі з цих функцій сильно перевантажують базу даних, тому, не перезагружайте сторінку після кожного редагування ;-)",
 "maintenancebacklink"	=> "Повернутися на сторінку обслуговування",
 "disambiguations"	=> "Багатозначні статті",
-"disambiguationspage"	=> "Вікіпедія:Посилання_на_багатозначні_статті",
+"disambiguationspage"	=> "{{SITENAME}}:Посилання_на_багатозначні_статті",
 "disambiguationstext"	=> "Наступна статті посилаються на <i>багатозначні статті</i>. Замість цього вони повинні вказувати на відповідну конкретну статтю.<br />Стаття вважається багатозначною, якщо на неї вказує $1.<br />Посилання з інших просторів імен тут <i>не</i> вказані.",
 "doubleredirects"	=> "Подвійні перенаправлення",
 "doubleredirectstext"	=> "<b>Увага:</b> Цей список може містити невірні елементи. Це значить, що після першої директиви #REDIRECT йде додатковий текст з посиланнями.<br />\nКожен рядок містить посилання на перше та друге перенаправлення, а також перший рядок тексту другого перенаправлення, що, звичайно, містить \"реальне\" перенаправленне на необхідну статтю, куди повинно вказувати й перше перенаправленне.",
@@ -567,7 +567,7 @@ $2 Показувати перенаправлення   Пошук на $3 $9",
 "newpages"		=> "Нові статті",
 "ancientpages"		=> "Самі старі статті",
 "movethispage"	=> "Перемістити її",
-"unusedimagestext" => "<p>Будь-ласка, врахуйте, що інші веб-сайти (подібно інших мовних розділів Вікіпедії) можуть використовувати пряме посилання (URL) на це зображення, і тому зображення може активно використовуватися не дивлячись на його присутність в цьому списку.",
+"unusedimagestext" => "<p>Будь-ласка, врахуйте, що інші веб-сайти (подібно інших мовних розділів {{SITENAME}}) можуть використовувати пряме посилання (URL) на це зображення, і тому зображення може активно використовуватися не дивлячись на його присутність в цьому списку.",
 "booksources"	=> "Джерела книг",
 "booksourcetext" => "Нижче наведено список посилань на інші веб-сайти, де продаються нові та такі, що були в користуванні книги, а також там  може бути інформація про книги, які ви шукаєте.
 {{SITENAME}} ніяк не зв’язані з будь-якими з них, і цей список не може розглядатися як їх підтримка.",
@@ -647,7 +647,7 @@ $3...
 "historywarning" => "Попередження: Стаття, яку ви збираєтеся вилучити, має журнал редагувань: ",
 "confirmdeletetext" => "Ви ось-ось назавжди вилучите статтю чи файл і всі її журнали редагувань з бази даних.
 Будь-ласка, підтвердіть, що ви бажаєте зробити це, що ви повністю розумієте наслідки й що ви робите це в відповідності з
-[[{{ns:project}}:Правила|правилами Вікіпедії]].",
+[[{{ns:project}}:Правила|правилами {{SITENAME}}]].",
 "actioncomplete" => "Дію виконано",
 "deletedtext"	=> "\"$1\" було вилучено.
 Див. $2 для перегляду списку останніх вилучень.",
@@ -716,7 +716,7 @@ $3...
 "blockip"		=> "Заблокувати IP-адресу",
 "blockiptext"	=> "Використовуйте форму що нижче, щоб заблокувати можливість збереження з вказаної IP-адреси.
 Це може бути зроблене виключно для попередження вандалізму і тільки в відповідності до
-[[{{ns:project}}:Правила|правил Вікіпедії]].
+[[{{ns:project}}:Правила|правил {{SITENAME}}]].
 Нище вкажіть конкретную причину (наприклад, процитуйте деякі статті з ознаками вандалізму).",
 "ipaddress"		=> "IP-адреса/Імя користувача",
 "ipbreason"		=> "Причина",
@@ -754,9 +754,9 @@ IP-адреси.",
 "locknoconfirm" => "Ви не поставили галочку в поле підтвердження.",
 "lockdbsuccesssub" => "Базу даних заблоковано",
 "unlockdbsuccesssub" => "Базу даних розблоковано",
-"lockdbsuccesstext" => "Базу даних Вікіпедії заблоковано.
+"lockdbsuccesstext" => "Базу даних {{SITENAME}} заблоковано.
 <br />Не забудьте її розблокувати після завершення обслуговування.",
-"unlockdbsuccesstext" => "Базу даних Вікіпедії розблоковано.",
+"unlockdbsuccesstext" => "Базу даних {{SITENAME}} розблоковано.",
 
 # Move page
 #
